# PennyLM

./: README.md  create_ipj_dataset.ipynb  main.py  pyproject.toml  train_classifier.py  train_ipj.py
ipj/original_text/: 38817.txt  42201-0.txt  43528-0.txt  43817-0.txt  52794-0.txt  53981-0.txt  53982-0.txt  53983-0.txt  54128-0.txt  54155-0.txt  54156-0.txt  54209-0.txt  54232-0.txt  54238-0.txt  54252-0.txt  54258-0.txt  54267-0.txt  54290-0.txt  54297-0.txt  54388-0.txt  54396-0.txt  54416-0.txt  54442-0.txt  54509-0.txt  54534-0.txt  54563-0.txt  54584-0.txt  54624-0.txt  54661-0.txt  54712-0.txt  54722-0.txt  54748-0.txt  54781-0.txt  54839-0.txt  54852-0.txt  54924-0.txt  55003-0.txt  55066-0.txt  55180-0.txt  55181-0.txt  (+12 more)
utils/: clean.py
